[gd_scene load_steps=5 format=3 uid="uid://dc4tpqo3jmxc1"]

[ext_resource type="Script" path="res://scripts/table.gd" id="1_4dm1x"]
[ext_resource type="Texture2D" uid="uid://bsnmva1farg28" path="res://textures/white.jpeg" id="3_4umbo"]
[ext_resource type="Texture2D" uid="uid://ccl7ng2lb1bo" path="res://textures/table.png" id="4_h5pt2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2voae"]
size = Vector2(146, 149)

[node name="table" type="Node2D"]
script = ExtResource("1_4dm1x")

[node name="sprite" type="Sprite2D" parent="."]
scale = Vector2(0.0603516, 0.0605059)
texture = ExtResource("4_h5pt2")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_2voae")

[node name="CustomerRequest" type="Label" parent="."]
offset_left = -16.0
offset_top = -110.0
offset_right = 24.0
offset_bottom = -87.0

[node name="PatienceTimeLabel" type="Label" parent="."]
offset_left = -22.0
offset_top = -143.0
offset_right = 18.0
offset_bottom = -120.0

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="PatienceTimer" type="Timer" parent="."]
one_shot = true

[node name="PatienceBar" type="TextureProgressBar" parent="."]
offset_left = -43.0
offset_top = -81.0
offset_right = 225.0
offset_bottom = -64.0
scale = Vector2(0.319999, 1)
value = 50.0
texture_under = ExtResource("3_4umbo")
texture_over = ExtResource("3_4umbo")
texture_progress = ExtResource("3_4umbo")
tint_over = Color(1, 0, 0, 0)
tint_progress = Color(1, 0.00999999, 0.00999999, 1)

[node name="Patience" type="Label" parent="PatienceBar"]
texture_filter = 1
layout_mode = 0
offset_left = 50.0002
offset_top = -4.0
offset_right = 231.0
offset_bottom = 19.0
scale = Vector2(2.75001, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Patience"

[connection signal="score_obtained" from="." to="." method="_on_score_obtained"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="PatienceTimer" to="." method="_on_patience_timer_timeout"]
